--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                             function updateTimer() {
                                 var now = new Date().getTime();
-                                var distance = countDownDate - now;
+                                var distance = Math.max(0, countDownDate - now);
 
                                 var days = Math.floor(distance / (1000 * 60 * 60 * 24));
                                 var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
