Enable application button

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         </script>
 
                         <a href="https://forms.office.com/r/0w1mZgxjGY" target="_blank"
-                            class="btn btn-lg disabled days-one-regular "
+                            class="btn btn-lg days-one-regular "
                             style="background-color: #0de5a8; color: black; margin: 2vh 0; padding: 15px 30px; font-size: 20px; border-radius: 8px; text-decoration: none; display: inline-block;"
                             onmouseover="this.style.backgroundColor='#18ffb3';"
                             onmouseout="this.style.backgroundColor='#0de5a8';">
