hide sponsor application

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
         </div>
     </section>
     <div data-aos="fade-up" id="sponsors" class="photo-gallery" style="padding-bottom: 60px;padding-top: 80px;">
-        <div class="container">
+        <!-- <div class="container">
             <div class="intro" style="max-width: 700px;">
                 <h2 class="text-center">Interested in Becoming a Sponsor?</h2>
                 <p class="text-center">If you or your company is interested in being prominently featured among the
@@ -871,7 +871,7 @@
                 <p class="text-center" style="margin-top: 16px;"><a class="btn btn-primary btn-lg btn-default"
                         role="button" href="./2026.pdf">Learn More Here</a><br></p>
             </div>
-        </div>
+        </div> -->
         <div class="container">
             <h2 class="text-center">Our Sponsors and Partners</h2>
             <div class="container d-flex flex-column align-items-center" style="gap: 48px;">
